project2/test/11711310_test_06.out
Error type 4 at Line 5: redefine function: foo
Error type 9 at Line 10: the function’s arguments mismatch the declared parameters
