project2/test/11711310_test_06.spl
float foo(float a, float b) {
  return a * b;
}

int foo(int a, int b) {
  return a * b;
}

int main() {
  foo(1, 2);
}
